# service/service-api/docs/swagger/swagger.json
@@ -1349,6 +1349,14 @@
         "model.TraderSwitch": {
             "type": "object",
             "properties": {
+                "apiKey": {
+                    "type": "string",
+                    "example": "自行输入"
+                },
+                "apiSecret": {
+                    "type": "string",
+                    "example": "自行输入"
+                },
                 "exchangeId": {
                     "type": "integer",
                     "example": 2358885120275906
